# lithtml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: bench_wikipedia.rs  wikipedia-simple.html
examples/get_all_href/: main.rs
examples/simple_parser/: main.rs
src/: lib.rs
src/dom/: element.rs  formatting.rs  mod.rs  node.rs  options.rs  span.rs
tests/: bin.rs  comments.rs  creation.rs  document.rs  document_empty.rs  document_fragment.rs  element.rs  element_attributes.rs  node_iter.rs  output.rs  source_span.rs  svg.rs  text.rs  websites.rs
tests/snapshots/: creation__it_can_create_artefacts.snap  element__it_can_parse_one_element_mixed_symbols.snap  element__it_skips_dangling_elements.snap  element_attributes__it_can_parse_attribute_key_mixed_case_symbols_only.snap  element_attributes__it_can_parse_attribute_multiple_quotes.snap  element_attributes__it_can_parse_double_quote.snap  element_attributes__it_can_parse_id.snap  output__it_can_output_complex_html_as_pretty_html.snap  output__it_handles_class_output_correct.snap  output__it_handles_text_correct.snap  source_span__it_can_generate_source_span.snap
