[package]
name = "lithtml"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
repository = "https://github.com/Roba1993/lithtml"
description = "A lightweight and fast HTML parser for Rust, designed to handle both full HTML documents and fragments efficiently."
keywords = ["html", "parser", "html5", "dom", "lite"]
categories = ["parsing", "web-programming", "encoding"]
readme = "README.md"

[package.metadata.docs.rs]
minimum-rust-version = "1.56.0"

[lib]
name = "lithtml"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
indoc = "2.0.1"
insta = { version = "1.42", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "get_all_href"
path = "examples/get_all_href/main.rs"

[[example]]
name = "simple_parser"
path = "examples/simple_parser/main.rs"

[[bench]]
name = "bench_wikipedia"
harness = false
